# brightlight

./: .dockerignore  .gitignore  .npmrc  Cargo.toml  Dockerfile  Dockerfile.fixed  MITIGATION_GUIDE.md  TODO.md  TODO_ARCHITECT_RECOMMENDATIONS.md  alphamax.md  architect_preflight.sh  bribe-engine.ts  brightsky-rust-restructure-plan.md  brightsky_audit_framework.md  brightsky_audit_framework_v2.md  brightsky_audit_report.md  brightsky_directory.md  brightsky_subsystems.md  bss_04_graph.rs  bss_05_sync.rs  bss_45_risk.rs  deployed_live_local.md  deployed_vercel_live.md  docker-compose.yml  main.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  requirements.txt  rust-toolchain.toml  start-local.ps1  tsconfig.base.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: rust-quality.yml
.husky/: pre-commit
api/: package.json  tsconfig.json
api/src/: index.ts
api/src/lib/: alphaCopilot.ts  bribeEngine.ts  executionControls.ts  opportunityScanner.ts  preflight.test.ts  priceOracle.ts
api/src/routes/: engine.ts  health.ts  main.rs  settings.ts  telemetry.ts  trades.ts  wallet.ts
artifacts/api-server/: build.mjs
artifacts/api-server/src/: app.ts
artifacts/brightsky/: index.html  tailwind.config.js
lib/: ai-agent.ts
lib/api-client-react/: tsconfig.tsbuildinfo
lib/api-spec/: openapi.yaml
lib/api-zod/: tsconfig.tsbuildinfo
lib/db/: drizzle.config.cjs  drizzle.config.mjs  package.json  tsconfig.tsbuildinfo
scripts/: chaos-test.ps1  chaos-test.sh  local-deploy.ps1  local-deploy.sh  monitor-profit.ps1  monitor-profit.sh  preflight.sh  preinstall-enforce-pnpm.cjs  run-api-live-from-env-data.ps1  rust-pre-commit-hook.sh  stop-local.ps1  stop-local.sh
solver/: Cargo.toml
solver/src/: lib.rs  main.rs
ui/: Dockerfile  package.json  vite.config.ts
ui/src/: App.tsx
(+37 files in other folders)
