[package]
name = "brightsky-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brightsky"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["abigen", "rustls", "ipc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
petgraph = "0.6"
rayon = "1.7"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true          # Enable Link Time Optimization for best runtime performance
codegen-units = 1   # Maximize optimization across the entire crate
panic = "abort"    # Remove stack unwinding for a smaller/faster binary
incremental = false
